--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -14,3 +14,10 @@ p,
 div {
   font-size: 16px;
 }
+
+.aside {
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
+  flex-direction: column;
+  padding: 10px;
+}
