--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -21,3 +21,9 @@ div {
   flex-direction: column;
   padding: 10px;
 }
+
+.content p {
+  line-height: 1.5;
+  text-align: justify;
+  margin: 22px 0px;
+}
